--- a/buildgame.cbp
+++ b/buildgame.cbp
@@ -8,87 +8,101 @@
 		<Option virtualFolders="CMake Files\;CMake Files\..\;CMake Files\..\..\;CMake Files\..\..\..\;CMake Files\..\..\..\..\;CMake Files\..\..\..\..\usr\;CMake Files\..\..\..\..\usr\lib\;CMake Files\..\..\..\..\usr\lib\x86_64-linux-gnu\;CMake Files\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\;CMake Files\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\SFML\;"/>
 		<Build>
 			<Target title="all">
-				<Option working_dir="/home/oli/CLionProjects/buildgame"/>
+				<Option working_dir="/home/oli/CLionProjects/buildgame_middleout"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 all"/>
-					<CompileFile command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 all"/>
+					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="edit_cache">
-				<Option working_dir="/home/oli/CLionProjects/buildgame"/>
+				<Option working_dir="/home/oli/CLionProjects/buildgame_middleout"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 edit_cache"/>
-					<CompileFile command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 edit_cache"/>
+					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="rebuild_cache">
-				<Option working_dir="/home/oli/CLionProjects/buildgame"/>
+				<Option working_dir="/home/oli/CLionProjects/buildgame_middleout"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
-					<CompileFile command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
+					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="SFMLApp">
-				<Option output="/home/oli/CLionProjects/buildgame/SFMLApp" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/oli/CLionProjects/buildgame"/>
+				<Option output="/home/oli/CLionProjects/buildgame_middleout/SFMLApp" prefix_auto="0" extension_auto="0"/>
+				<Option working_dir="/home/oli/CLionProjects/buildgame_middleout"/>
 				<Option object_output="./"/>
 				<Option type="1"/>
 				<Option compiler="gcc"/>
 				<Compiler>
-					<Add directory="/home/oli/CLionProjects/buildgame/SFML_INCLUDE_DIR"/>
+					<Add directory="/home/oli/CLionProjects/buildgame_middleout/SFML_INCLUDE_DIR"/>
+					<Add directory="/usr/include/c++/9"/>
+					<Add directory="/usr/include/x86_64-linux-gnu/c++/9"/>
+					<Add directory="/usr/include/c++/9/backward"/>
+					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/9/include"/>
+					<Add directory="/usr/local/include"/>
+					<Add directory="/usr/include/x86_64-linux-gnu"/>
+					<Add directory="/usr/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 SFMLApp"/>
-					<CompileFile command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 SFMLApp"/>
+					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="SFMLApp/fast">
-				<Option output="/home/oli/CLionProjects/buildgame/SFMLApp" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/home/oli/CLionProjects/buildgame"/>
+				<Option output="/home/oli/CLionProjects/buildgame_middleout/SFMLApp" prefix_auto="0" extension_auto="0"/>
+				<Option working_dir="/home/oli/CLionProjects/buildgame_middleout"/>
 				<Option object_output="./"/>
 				<Option type="1"/>
 				<Option compiler="gcc"/>
 				<Compiler>
-					<Add directory="/home/oli/CLionProjects/buildgame/SFML_INCLUDE_DIR"/>
+					<Add directory="/home/oli/CLionProjects/buildgame_middleout/SFML_INCLUDE_DIR"/>
+					<Add directory="/usr/include/c++/9"/>
+					<Add directory="/usr/include/x86_64-linux-gnu/c++/9"/>
+					<Add directory="/usr/include/c++/9/backward"/>
+					<Add directory="/usr/lib/gcc/x86_64-linux-gnu/9/include"/>
+					<Add directory="/usr/local/include"/>
+					<Add directory="/usr/include/x86_64-linux-gnu"/>
+					<Add directory="/usr/include"/>
 				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 SFMLApp/fast"/>
-					<CompileFile command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/home/oli/CLionProjects/buildgame/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 SFMLApp/fast"/>
+					<CompileFile command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="/usr/bin/make -j12 -f &quot;/home/oli/CLionProjects/buildgame_middleout/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 		</Build>
-		<Unit filename="/home/oli/CLionProjects/buildgame/main.cpp">
+		<Unit filename="/home/oli/CLionProjects/buildgame_middleout/main.cpp">
 			<Option target="SFMLApp"/>
 		</Unit>
-		<Unit filename="/home/oli/CLionProjects/buildgame/CMakeLists.txt">
+		<Unit filename="/home/oli/CLionProjects/buildgame_middleout/CMakeLists.txt">
 			<Option virtualFolder="CMake Files\"/>
 		</Unit>
-		<Unit filename="/home/oli/CLionProjects/buildgame/../../../../usr/lib/x86_64-linux-gnu/cmake/SFML/SFMLConfig.cmake">
+		<Unit filename="/home/oli/CLionProjects/buildgame_middleout/../../../../usr/lib/x86_64-linux-gnu/cmake/SFML/SFMLConfig.cmake">
 			<Option virtualFolder="CMake Files\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\SFML\"/>
 		</Unit>
-		<Unit filename="/home/oli/CLionProjects/buildgame/../../../../usr/lib/x86_64-linux-gnu/cmake/SFML/SFMLConfigDependencies.cmake">
+		<Unit filename="/home/oli/CLionProjects/buildgame_middleout/../../../../usr/lib/x86_64-linux-gnu/cmake/SFML/SFMLConfigDependencies.cmake">
 			<Option virtualFolder="CMake Files\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\SFML\"/>
 		</Unit>
-		<Unit filename="/home/oli/CLionProjects/buildgame/../../../../usr/lib/x86_64-linux-gnu/cmake/SFML/SFMLConfigVersion.cmake">
+		<Unit filename="/home/oli/CLionProjects/buildgame_middleout/../../../../usr/lib/x86_64-linux-gnu/cmake/SFML/SFMLConfigVersion.cmake">
 			<Option virtualFolder="CMake Files\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\SFML\"/>
 		</Unit>
-		<Unit filename="/home/oli/CLionProjects/buildgame/../../../../usr/lib/x86_64-linux-gnu/cmake/SFML/SFMLSharedTargets-none.cmake">
+		<Unit filename="/home/oli/CLionProjects/buildgame_middleout/../../../../usr/lib/x86_64-linux-gnu/cmake/SFML/SFMLSharedTargets-none.cmake">
 			<Option virtualFolder="CMake Files\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\SFML\"/>
 		</Unit>
-		<Unit filename="/home/oli/CLionProjects/buildgame/../../../../usr/lib/x86_64-linux-gnu/cmake/SFML/SFMLSharedTargets.cmake">
+		<Unit filename="/home/oli/CLionProjects/buildgame_middleout/../../../../usr/lib/x86_64-linux-gnu/cmake/SFML/SFMLSharedTargets.cmake">
 			<Option virtualFolder="CMake Files\..\..\..\..\usr\lib\x86_64-linux-gnu\cmake\SFML\"/>
 		</Unit>
 	</Project>
